# sayata_ai_interview_question

./: CLAUDE.md  implementation_plan.md  next_actions.md  user_intent.md
python_question/: .gitignore  Dockerfile  INTERVIEWER_GUIDE.md  README.md  README_PREP.md  docker-compose.yml  pyproject.toml  setup.sh
python_question/docs/: about.md  architecture.md  business-rules.md  domain.md  frontend-guidelines.md  glossary.md
python_question/scripts/: build_simulators.sh  prepare_delivery.sh  run_servers.sh  run_tests.sh  start.py  start_carrier.py  start_server.py  stop_servers.sh  test_delivery.sh  test_solution.sh  verify.py  verify_setup.py
python_question/skeleton/: README.md
python_question/skeleton/src/sayata/: server.py
python_question/solutions/src/sayata/: models.py  server.py
python_question/solutions/src/sayata/carriers/: carrier_a.py  (+3 more)
python_question/src/sayata/: models.py  server.py  server_stub.py
python_question/src/sayata/carriers/: base.py  carrier_a.py  carrier_b.py
python_question/src/sayata/simulators/: carrier_a_sim.py  carrier_b_sim.py  carrier_c_sim.py  carrier_d_sim.py  runner.py
python_question/tests/: conftest.py  test_setup.py  test_stub.py  test_verification.py
python_question/tests/interviewer/: test_candidate_results.py  test_exercise_setup.py  test_verification.py
python_question/tickets/: ticket-1.md  ticket-2.md  ticket-3.md  ticket-4.md
python_question/tickets/candidate/: ticket-1.md  ticket-2.md  ticket-3.md  ticket-4.md
python_question/tickets/interviewer/: ticket-1.md  ticket-2.md  ticket-3.md  ticket-4.md
(+7 files in other folders)
