[project]
name = "sayata-interview"
version = "0.1.0"
description = "Sayata quoting platform — interview exercise"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pytest>=8.3",
    "requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sayata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
